[package]
name = "saturn-cli"
version = "0.1.1"
edition = "2021"
description = "saturn is a command-line interface to calendaring, supporting Google Calendar"
authors = ["Erik Hollensbe <erik+github@hollensbe.org>"]
license = "MIT"
homepage = "https://github.com/erikh/saturn"
repository = "https://github.com/erikh/saturn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1"
notify-rust = "^4.9"
anyhow = "^1"
chrono = { version = "^0.4", features = [ "serde" ] }
chrono-tz = "^0.8"
serde = "^1"
serde_derive = "^1"
ciborium = "^0.2"
clap = { version = "^4.4", features = [ "derive" ] }
regex = "^1"
fancy-duration = { version = "^0.5", default-features = false, features = [ "chrono" ] }
ttygrid = "^0.2"
nix = "^0.26"
serde_yaml = "^0.9"
tokio = { version = "^1", features = [ "full" ] }
gcal = "^0.1"
async-trait = "^0.1"
reqwest = { version = "^0.11", features = [ "json" ] }
ratatui = { version = "^0.23", features = [ "all-widgets" ] }
crossterm = "^0.27"
rand = "^0.8"

[dev-dependencies]
tempfile = "^3.8"
